# cmake-template

./: CMakeLists.txt  README.md
src/: main.cpp
src/lib/: CMakeLists.txt  lib.cpp  lib.h
